# codemcp

./: .gitignore  Cargo.toml  PLAN.md  README.md
bench/: .gitignore  README.md  analyze.py  configs.py  ground_truth.py  harness.py  mcp.github.json  pyproject.toml  runner.py  tasks.py
pyworker/: bootstrap.py
pyworker/tests/: test_concurrency.py  test_validation.py
src/: admin.rs  cli.rs  config.rs  control.rs  env.rs  error.rs  launcher.rs  main.rs  prompt.rs  runtime.rs  server.rs  setup.rs
src/auth/: callback.rs  login.rs  mod.rs  oauth_client.rs  store.rs
src/exec/: docker.rs  host.rs  mod.rs
src/sdk/: codegen.rs  keyset.rs  mod.rs  shape.rs  summary.rs
src/tui/: mod.rs  ui.rs
src/upstream/: client.rs  mod.rs
