[project]
name = "codemcp-bench"
version = "0.1.0"
description = "Repeatable token-usage experiment: direct MCP vs codemcp gateway, over skymoore GitHub data."
requires-python = ">=3.11"
dependencies = [
    "langchain==1.3.11",
    "langchain-anthropic==1.4.7",
    "langgraph==1.2.6",
    "langchain-mcp-adapters==0.3.0",
    "mcp==1.28.0",
    "anyio==4.14.0",
]

# Virtual project (no build): uv manages the venv + deps without packaging us.
[tool.uv]
package = false
